--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ headless_chrome = "1.0"
 anyhow = "1.0"
 futures-util = "0.3"
 quick-xml = "0.22"
+serde = { version = "1.0", features = ["derive"] }
+utoipa = "2.0"
+utoipa-swagger-ui = { version = "2.0", features = ["actix-web"] }
