Revert "Add MultipartFormData schema for OpenAPI documentation and update request bodies"
This reverts commit 9b590774f08cbe98ad0067a0f8297a2da556b359.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ anyhow = "1.0"
 futures-util = "0.3"
 quick-xml = "0.22"
 serde = { version = "1.0", features = ["derive"] }
-utoipa = { version = "2.0", features = ["actix_extras"] }
+utoipa = "2.0"
 utoipa-swagger-ui = { version = "2.0", features = ["actix-web"] }
